# carService

./: .gitignore  config.py  main.py  pyproject.toml
authentication/: admin.py  crud.py  models.py  routes.py  schemas.py
authentication/migrations/: 0001_initial.py  0002_user_address_user_created_at_user_updated_at_and_more.py
carService/: asgi.py  settings.py  urls.py  wsgi.py
db/: schema.sql  seed.sql
docs/: api_contracts.yaml  architecture.md  er_diagram.md  infrastructure.md  migration_strategy.md  redis_structures.md  tech_stack.md
utils/: crud.py  notification.py  schemas.py  utils.py  validation.py
